--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -53,30 +53,28 @@ embodied in his speech are resemblances only, motivated in fact by
 his desire to win Phaedrus away from an indiscriminate love of rhetoric
 to a controlled but elevated love of philosophical study.
 
-{\em Phaedrus} is one of Plato’s most admired literary masterpieces. Yet
-toward its end Socrates criticizes severely those who take their
-own writing seriously---any writing, not just orators’ speeches.
-Writings cannot contain or constitute knowledge of any important
-matter. Knowledge can only be lodged in a mind, and its essential
-feature there is an endless capacity to express, interpret, and
-reinterpret itself suitably, in response to every challenge---something
-a written text once let go by its author plainly lacks: it
-can only keep on repeating the same words to whoever picks it
-up. But does not a Platonic dialogue, in engaging its reader in a
-creative, multilayered intellectual encounter, have a similar
-capacity for ever-deeper reading, for the discovery of underlying
-meaning beyond the simple presentation of its surface ideas?
-Knowledge is only in souls, but, despite the Phaedrus’ own
-critique of writing, reading such a dialogue may be a good way of
-working to attain it.
+\blank[line]
+%{\em Phaedrus} is one of Plato’s most admired literary masterpieces. Yet
+%toward its end Socrates criticizes severely those who take their
+%own writing seriously---any writing, not just orators’ speeches.
+%Writings cannot contain or constitute knowledge of any important
+%matter. Knowledge can only be lodged in a mind, and its essential
+%feature there is an endless capacity to express, interpret, and
+%reinterpret itself suitably, in response to every challenge---something
+%a written text once let go by its author plainly lacks: it
+%can only keep on repeating the same words to whoever picks it
+%up. But does not a Platonic dialogue, in engaging its reader in a
+%creative, multilayered intellectual encounter, have a similar
+%capacity for ever-deeper reading, for the discovery of underlying
+%meaning beyond the simple presentation of its surface ideas?
+%Knowledge is only in souls, but, despite the Phaedrus’ own
+%critique of writing, reading such a dialogue may be a good way of
+%working to attain it.
 
-\hfill John M.~Cooper\par
+\hfill --- John M.~Cooper\par
 \stopchapter
 
 \startchapter[title=Phaedrus]
-
-\startalignment[center]{\em Translated by A.~Nehamas and P.~Woodruff}\stopalignment
-\blank[line]
 
 \indent \saysocrates Phaedrus, my friend!\inouter{227} Where have you been? And where are you 
 going?
