--- a/projects/mc/content/symposium.tex
+++ b/projects/mc/content/symposium.tex
@@ -68,7 +68,7 @@ dialogue.
 
 \startchapter[title=Symposium]
 
-APOLLODORUS: In\inouter{172} fact, your question does not find me
+\sayapollodorus In\inouter{172} fact, your question does not find me
 unprepared. Just the other day, as it happens, I was walking to the city
 from my home in Phaleron when a man I know, who was making his way
 behind me, saw me and called from a distance:
@@ -134,21 +134,21 @@ I'm a failure, and, believe me, I think that what you think is true. But
 as for all of you, I don't just {\em think} you are failures---I know it
 for a fact.
 
-FRIEND: You'll never change, Apollodorus! Always nagging, even at
+\sayfriend You'll never change, Apollodorus! Always nagging, even at
 yourself! I do believe you think everybody---yourself first of all---is
 totally worthless, except, of course, Socrates. I don't know exactly how
 you came to be called “the maniac,” but you certainly talk like one,
 always furious with everyone, including yourself---but not with
 Socrates!
 
-APOLLODORUS: Of course, my dear friend\inouter{e}, it's perfectly obvious why I 
+\sayapollodorus Of course, my dear friend\inouter{e}, it's perfectly obvious why I 
 have these views about us all: it's simply because I'm a maniac,
 and I'm raving!
 
-FRIEND: It's not worth arguing about this now, Apollodorus. Please do as
+\sayfriend It's not worth arguing about this now, Apollodorus. Please do as
 I asked: tell me the speeches.
 
-APOLLODORUS: All right \ldots{} Well, the speeches went something like
+\sayapollodorus All right \ldots{} Well, the speeches went something like
 this---but I'd better\inouter{174} tell you the whole story from the very beginning,
 as Aristodemus told it to me.
 
@@ -725,8 +725,9 @@ case.”
 “The sooner you start speaking, the better,” Aristophanes said. “I'll
 follow your instructions to the letter.”
 
-This, then, was the speech of Eryximachus:\crlf
-\crlf
+This, then, was the speech of Eryximachus:
+
+\blank[line]
 
 Pausanias introduced a crucial consideration in his speech, though in my
 opinion he did not develop it sufficiently. Let me therefore try to
@@ -855,8 +856,9 @@ Love. If so, I assure you, it was quite inadvertent. And if in fact I
 have overlooked certain points, it is now your task, Aristophanes, to
 complete the argument---unless, of course, you are planning on a
 different approach. In any \inouter{189} case, proceed; your hiccups
-seem cured.\crlf
-\crlf
+seem cured.
+
+\blank[line]
 
 Then Aristophanes took over (so Aristodemus said): “The hiccups have
 stopped all right---but not before I applied the Sneeze Treatment to
@@ -890,8 +892,9 @@ anything else! For he loves the human \inouter{d} race more than any other
 god, he stands by us in our troubles, and he cures those ills we humans
 are most happy to have mended. I shall, therefore, try to explain his
 power to you; and you, please pass my teaching on to everyone
-else.”\crlf
-\crlf
+else.”
+
+\blank[line]
 
 First you must learn what Human Nature was in the beginning and what has
 happened to it since, because long ago our nature was not what it is
@@ -1137,8 +1140,9 @@ made his offering to the god, then you can have your discussion.”
 
 “You're doing a beautiful job, Phaedrus,” said Agathon. “There's nothing
 to keep me from giving my speech. Socrates will have many opportunities
-for discussion later.”\crlf
-\crlf
+for discussion later.”
+
+\blank[line]
 
 I wish first to speak of how I ought to speak, and only then to speak.
 In my opinion, you see, all those who have spoken before me did not so
@@ -1175,14 +1179,14 @@ now as long as Love has been king of the gods.
 \inouter{d} So he is young. And besides being young, he is delicate. It
 takes a poet as good as Homer to show how delicate the god is. For Homer
 says that Mischief is a god and that she is delicate---well, that her
-feet are delicate, anyway! He says:\crlf
-\crlf
+feet are delicate, anyway! He says:
 
-{\em \ldots{} hers are delicate feet: not on the ground}\crlf
-{\em Does she draw nigh; she walks instead upon the heads of
+\blank[line]
+\quad{\em \ldots{} hers are delicate feet: not on the ground}\par
+\quad{\em Does she draw nigh; she walks instead upon the heads of
 men.}\endnote{{\em Iliad} xix.92--93.
-“Mischief” translates {\em Atē}.}\crlf
-\crlf
+“Mischief” translates {\em Atē}.}
+\blank[line]
 
 \inouter{e} A lovely proof, I think, to show how delicate she is: she
 doesn't walk on anything hard; she walks only on what is soft. We shall
@@ -1257,13 +1261,13 @@ must try not to leave out anything that can be said on this. In the
 first place---to honor {\em our} profession as Eryximachus \inouter{e} did
 his\endnote{At 186b.}---the god is so
 skilled a poet that he can make others into poets: once Love touches
-him, {\em anyone} becomes a poet,\crlf
-\crlf
+him, {\em anyone} becomes a poet,
 
-{\em \ldots{} howe'er uncultured he had been
+\blank[line]
+\quad{\em \ldots{} howe'er uncultured he had been
 before.}\endnote{Euripides,
-{\em Stheneboea} (frg. 666 Nauck).}\crlf
-\crlf
+{\em Stheneboea} (frg. 666 Nauck).}
+\blank[line]
 
 This, we may fittingly observe, testifies that Love is a good poet,
 good, in sum, at every kind of artistic production. For you can't give
@@ -1293,12 +1297,12 @@ beautiful and the best; after that, if anyone else is at all like that,
 Love is responsible. I am suddenly struck by a need to say something in
 poetic meter,\endnote{After these two lines of
 poetry, Agathon continues with an extremely poetical prose peroration.} that it
-is he who---\crlf
-\crlf
+is he who---
 
-{\em Gives peace to men and stillness to the sea,}\crlf
-\inouter{d} {\em Lays winds to rest, and careworn men to sleep.}\crlf
-\crlf
+\blank[line]
+\quad{\em Gives peace to men and stillness to the sea,}\par
+\quad{\em Lays winds to rest, and careworn men to sleep.}\inouter{d}
+\blank[line]
 
 Love fills us with togetherness and drains all of our divisiveness away.
 Love calls gatherings like these together. In feasts, in dances, and in
@@ -1340,7 +1344,7 @@ close to them in beauty, and so I would almost have run away and
 escaped, \inouter{c} if there had been a place to go. And, you see, the
 speech reminded me of Gorgias, so that I actually experienced what Homer
 describes: I was afraid that Agathon would end by sending the Gorgian
-head,\“Gorgian head” is a pun
+head,\endnote{“Gorgian head” is a pun
 on “Gorgon's head.” In his peroration Agathon had spoken in the style of
 Gorgias, and this style was considered to be irresistibly powerful. The
 sight of a Gorgon's head would turn a man to stone.}
@@ -1538,8 +1542,9 @@ be as you say.”
 
 “Then it's the truth, my beloved Agathon, that you are unable to
 contradict,” he said. “It is not hard at all to contradict
-Socrates.”\crlf
-\crlf
+Socrates.”
+
+\blank[line]
 
 \inouter{d} Now I'll let you go. I shall try to go through for you the
 speech about Love I once heard from a woman of Mantinea, Diotima---a
@@ -2123,8 +2128,9 @@ myself and practice them with special diligence, and why I commend them
 to others. Now and always I praise the power and courage of Love so far
 \inouter{c} as I am able. Consider this speech, then, Phaedrus, if you wish,
 a speech in praise of Love. Or if not, call it whatever and however you
-please to call it.\crlf
-\crlf
+please to call it.
+
+\blank[line]
 
 Socrates' speech finished to loud applause. Meanwhile, Aristophanes was
 trying to make himself heard over their cheers in order to make a
@@ -2280,8 +2286,9 @@ and correct me; at worst, there'll be mistakes in my speech, not lies.
 But \inouter{215} you can't hold it against me if I don't get
 everything in the right order---I'll say things as they come to mind. It
 is no easy task for one in my condition to give a smooth and orderly
-account of your bizarreness!”\crlf
-\crlf
+account of your bizarreness!”
+
+\blank[line]
 
 I'll try to praise Socrates, my friends, but I'll have to use an image.
 And though he may think I'm trying to make fun of him, I assure you my
@@ -2545,13 +2552,15 @@ should have seen the looks they gave him; they thought he was only doing
 it to spite them!
 
 So much for that! But you should hear what else he did during that same
-campaign,\crlf
-\crlf
+campaign,
 
-{\em The exploit our strong-hearted hero dared to
+\blank[line]
+
+\quad{\em The exploit our strong-hearted hero dared to
 do.}\endnote{{\em Odyssey} iv.242,
-271.}\crlf
-\crlf
+271.}
+
+\blank[line]
 
 One day, at dawn, he started thinking about some problem or other; he
 just stood outside, trying to figure it out. He couldn't resolve it, but
@@ -2592,13 +2601,15 @@ being on horseback, I wasn't in very great danger. Well, it was easy to
 see that he was remarkably more collected than Laches. But when I looked
 again I couldn't get your words, Aristophanes, out of my mind: in the
 midst of battle he was making his way exactly as he does around
-town,\crlf
-\crlf
+town,
 
-{\em \ldots{} with swagg'ring gait and roving
+\blank[line]
+
+\quad{\em \ldots{} with swagg'ring gait and roving
 eye.}\endnote{Cf. Aristophanes,
-{\em Clouds} 362.}\crlf
-\crlf
+{\em Clouds} 362.}
+
+\blank[line]
 
 He was observing everything quite calmly, looking out for friendly
 troops and keeping an eye on the enemy. Even from a great distance it
@@ -2648,8 +2659,9 @@ deceived us all: he presents himself as your lover, and, before you know
 it, you're in love with him yourself! I warn you, Agathon, don't let him
 fool you! Remember our torments; be on your guard: don't wait, like the
 fool in the \inouter{c} proverb, to learn your lesson from your own
-misfortune.\endnote{Cf. {\em Iliad} xvii.32.}\crlf
-\crlf
+misfortune.\endnote{Cf. {\em Iliad} xvii.32.}
+
+\blank[line]
 
 Alcibiades' frankness provoked a lot of laughter, especially since it
 was obvious that he was still in love with Socrates, who immediately
