--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -10,8 +10,8 @@
     \stopfrontmatter
 
     \startbodymatter
-%        \input content/phaedrus
-        \input rawcontent/rawsymposium
+        \input content/phaedrus
+        \input content/symposium
         \startchapter[title=Endnotes]
             \placenotes[endnote]
         \stopchapter
