--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -1,4 +1,10 @@
-\startchapter[title=Foreword to Phaedrus]
+\part[phaedrus]{Phaedrus}
+%\page[right]
+
+\blank[8*line,force]
+\noindent\centerline{\definedfont[Serif at 26pt] \kerncharacters[0.2] PHAEDRUS}
+
+\startchapter[title=Foreword]
 
 \noindent{\em Phaedrus} is commonly paired on the one hand with {\em Gorgias}
 and on the other with {\em Symposium}---with the former in sharing its
@@ -74,7 +80,7 @@ to a controlled but elevated love of philosophical study.
 \hfill --- John M.~Cooper\par
 \stopchapter
 
-\startchapter[title=Phaedrus]
+\startchapter[title=Phaedrus,reference=phaedrus]
 
 \indent \saysocrates Phaedrus, my friend!\inouter{227} Where have you been? And where are you 
 going?
