--- a/projects/mc/content/symposium.tex
+++ b/projects/mc/content/symposium.tex
@@ -1,6 +1,17 @@
-\startchapter[title=Foreword to Symposium]
+\part[symposium]{Symposium}
 
-Translated by A. Nehamas and P. Woodruff.
+\blank[8*line,force]
+\noindent\centerline{\definedfont[Serif at 26pt] S\kern 5.5pt%
+                                 Y\kern 5.5pt%
+                                 M\kern 6pt%
+                                 P\kern 4pt%
+                                 O\kern 4.5pt%
+                                 S\kern 6pt%
+                                 I\kern 5.5pt%
+                                 U\kern 5pt%
+                                 M}
+
+\startchapter[title=Foreword]
 
 This dialogue, Plato's poetic and dramatic masterpiece, relates the
 events of a ‘symposium' or formal drinking party held in honor of
@@ -63,7 +74,8 @@ reported on it to Glaucon (Socrates' conversation partner in the
 asked to hear about it all---and to us readers of Plato's
 dialogue.
 
-\hfill John M.~Cooper\par
+\blank[line]
+\hfill ---John M.~Cooper\par
 \stopchapter
 
 \startchapter[title=Symposium]
