--- a/projects/mc/content/titlepage.tex
+++ b/projects/mc/content/titlepage.tex
@@ -48,21 +48,13 @@
                                  U\kern 5pt%
                                  M}
 
-    \blank[26pt]
+    \blank[92pt]
 
-    {\ita Translated by}
-
-    \blank[3pt]
-
-    {\ita William Hackett}
-
-    \blank[49pt]
-
-    \dontleavehmode \externalfigure[floralheart][width=1.65in]
+    \dontleavehmode \externalfigure[floralheart2][width=2in]
 
     {\sc \kerncharacters[0.1] MEGAN\symbol[rightquote]S EDITION}
 
-    \blank[49pt]
+    \blank[92pt]
 
 {\sc \kerncharacters[0.1]Quat Books, Eslöv 2021}
 \stopmakeup
