--- a/projects/mc/content/tableofcontents.tex
+++ b/projects/mc/content/tableofcontents.tex
@@ -1,10 +1,13 @@
-\title{Contents}
-Arc 1: Gestation
-Gestation 1.1
-Gestation 1.2
-Gestation 1.3
-Gestation 1.4
-Gestation 1.5
-Gestation 1.6
-Interlude 1
+\chapter{Contents}
 
+\start
+\setupnarrower[middle=2.5cm]
+\startnarrower
+\tfa
+\noindent Phaedrus\hfill \at[phaedrus]
+\blank[line]
+\noindent Symposium\hfill \at[symposium]
+\blank[line]
+\noindent Endnotes\hfill \at[endnotes]
+\stopnarrower
+\stop
