--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -211,7 +211,26 @@
 % F I X   I S S U E S
 %
 
-%\adaptlayout[8][lines=-1] \adaptlayout[9][lines=-1]
+% Phaedrus
+\adaptlayout[10][lines=-1] \adaptlayout[11][lines=-1]
+\adaptlayout[48][lines=+1] \adaptlayout[49][lines=+1]
+\adaptlayout[60][lines=+1] \adaptlayout[61][lines=+1]
+\adaptlayout[68][lines=+1] \adaptlayout[69][lines=+1]
+% Symposium
+\adaptlayout[82][lines=+1] \adaptlayout[83][lines=+1]
+\adaptlayout[84][lines=+1] \adaptlayout[85][lines=+1]
+\adaptlayout[86][lines=+1] \adaptlayout[87][lines=+1]
+\adaptlayout[92][lines=+1] \adaptlayout[93][lines=+1]
+\adaptlayout[98][lines=+1] \adaptlayout[99][lines=+1]
+\adaptlayout[116][lines=+1] \adaptlayout[117][lines=+1]
+\adaptlayout[136][lines=-1] \adaptlayout[137][lines=-1]
+\adaptlayout[138][lines=+1] \adaptlayout[139][lines=+1]
+\adaptlayout[144][lines=+1] \adaptlayout[145][lines=+1]
+%Endnotes
+\adaptlayout[151][lines=+1]
+\adaptlayout[154][lines=+1] \adaptlayout[155][lines=+1]
+
+
 
 
 
