adding scratch, working on dropcaps

--- a/projects/mc/content/symposium.tex
+++ b/projects/mc/content/symposium.tex
@@ -2073,7 +2073,7 @@ beauty of a little boy or a man or a single custom (being a slave, of
 course, he’s low and small-minded)---but the lover is turned to the
 great sea of beauty, and, gazing upon this, he gives birth to many
 gloriously beautiful ideas and theories, in unstinting love of
-wisdom,\endnote{The leader: Love.} until, having
+wisdom,\endnote{I.e., philosophy.} until, having
 grown and been strengthened there, he catches sight of such \inouter{e}
 knowledge, and it is the knowledge of such beauty \ldots{}
 
