--- a/test/initials/initials.tex
+++ b/test/initials/initials.tex
@@ -13,17 +13,17 @@
 %\showboxes
 
 \define[1]\elevatedcapO{%
-    \definefont[ecfont][file:QTCaslanOpen.otf at 56pt]
-    \noindent\kern 1.5em {\ecfont O}
+    \definefont[capfont][file:QTCaslanOpen.otf at 56pt]
+    \noindent\kern 1.5em {\capfont O}
     \noindent\kern -0.6em {\kerncharacters[0.17]\sc #1}%            
 }
 
 \define[1]\dropcapT{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 20pt]
     \noindent\kern -0.65em
 %    \llap{\raise 4.15ex \hbox{\quotefont “}\kern -0.1em}%
-    {\dcfont T}
+    {\capfont T}
     \blank[-3*line]
     \dimen1=2.1em
     \dimen2=1.95em
@@ -37,11 +37,11 @@
 }
 
 \define[1]\dropcapN{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 16pt]
     \noindent\kern -0.08em
     \llap{\raise 2.4ex \hbox{\quotefont «}\kern 0em}%
-    {\dcfont N}
+    {\capfont N}
     \blank[-3*line]
     \dimen1=3.6em
     \dimen2=3.6em
@@ -55,11 +55,11 @@
 }
 
 \define[1]\dropcapA{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 12pt]
     \noindent\kern -0.08em
     \llap{\raise 4.65ex \hbox{\quotefont “}\kern -0.62em}%
-    {\dcfont A}
+    {\capfont A}
     \blank[-3*line]
     \dimen1=2.5em
     \dimen2=3em
@@ -73,11 +73,11 @@
 }
 
 \define[1]\dropcapV{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 14pt]
     \noindent\kern -1.5em
 %    \llap{\raise 4.15ex \hbox{\quotefont }\kern -0.1em}%
-    {\dcfont V}
+    {\capfont V}
     \blank[-3*line]
     \dimen1=1.75em
     \dimen2=1.25em
@@ -91,11 +91,11 @@
 }
 
 \define[1]\dropcapS{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 14pt]
     \noindent\kern -0.12em
 %    \llap{\raise 4.15ex \hbox{\quotefont }\kern -0.1em}%
-    {\dcfont S}
+    {\capfont S}
     \blank[-3*line]
     \dimen1=2.15em
     \dimen2=2.5em
@@ -109,11 +109,11 @@
 }
 
 \define[1]\dropcapL{%
-    \definefont[dcfont][Serif at 42pt]
+    \definefont[capfont][Serif at 42pt]
     \definefont[quotefont][Serif at 14pt]
     \noindent\kern -0.27em
 %    \llap{\raise 4.15ex \hbox{\quotefont }\kern -0.1em}%
-    {\dcfont L}
+    {\capfont L}
     \blank[-3*line]
     \dimen1=1.6em
     \dimen2=2.6em
@@ -127,6 +127,9 @@
 }
 
 \starttext
+
+Font: Domitian 10/12 10RR.
+
 \startcolumns
 
 \elevatedcapO{sculetur}
