--- a/test/initials/initials.tex
+++ b/test/initials/initials.tex
@@ -1,5 +1,7 @@
-\setuplayout[grid=yes,topspace=4pc,header=0pc,headerdistance=0pc,height=50pc,
-             backspace=4pc,width=22pc]
+\definepapersize[mypaper][width=30pc,height=49pc]
+\setuppapersize[mypaper][mypaper]
+\setuplayout[grid=yes,topspace=4pc,header=0pc,headerdistance=0pc,height=41pc,
+             bottomspace=4pc,backspace=4pc,width=22pc]
 \setupcolumns[n=2,distance=2pc,align=right,balance=yes]
 
 \setupbodyfont[domitian,10pt]
@@ -13,7 +15,7 @@
 %\showboxes
 
 \define[1]\elevatedcapO{%
-    \definefont[capfont][file:QTCaslanOpen.otf at 56pt]
+    \definefont[capfont][file:QTCaslanOpen.otf at 54pt]
     \noindent\kern 1.5em {\capfont O}
     \noindent\kern -0.6em {\kerncharacters[0.17]\sc #1}%            
 }
@@ -127,8 +129,10 @@
 }
 
 \starttext
+{\it Initials from Bringhurst, set in Domitian 10/12 $\times$ 10 RR.\crlf 
+Elevated cap: QTCaslanOpen 54pt. Drop caps: Domitian 42pt.}
 
-Font: Domitian 10/12 10RR.
+\blank[line]
 
 \startcolumns
 
