--- a/test/initials/initials.tex
+++ b/test/initials/initials.tex
@@ -35,7 +35,7 @@
         \dimen2 \dimexpr\hsize-\dimen2       
         \dimen3 \dimexpr\hsize-\dimen3     
         0pc \hsize                                   
-    \noindent{\kerncharacters[0.15]\sc #1}%            
+    \noindent{\kerncharacters[0.17]\sc #1}%            
 }
 
 \define[1]\dropcapN{%
@@ -53,7 +53,7 @@
         \dimen2 \dimexpr\hsize-\dimen2       
         \dimen3 \dimexpr\hsize-\dimen3     
         0pc \hsize                                   
-    \noindent{\kerncharacters[0.15]\sc #1}%            
+    \noindent{\kerncharacters[0.17]\sc #1}%            
 }
 
 \define[1]\dropcapA{%
@@ -71,7 +71,7 @@
         \dimen2 \dimexpr\hsize-\dimen2       
         \dimen3 \dimexpr\hsize-\dimen3     
         0pc \hsize                                   
-    \noindent{\kerncharacters[0.1]\sc #1}%            
+    \noindent{\kerncharacters[0.17]\sc #1}%            
 }
 
 \define[1]\dropcapV{%
@@ -132,7 +132,7 @@
 {\it Initials from Bringhurst, set in Domitian 10/12 $\times$ 10 RR.\crlf 
 Elevated cap: QTCaslanOpen 54pt. Drop caps: Domitian 42pt.}
 
-\blank[line]
+\blank[2*line]
 
 \startcolumns
 
