--- a/test/initials/initials.tex
+++ b/test/initials/initials.tex
@@ -17,7 +17,7 @@
 \define[1]\elevatedcapO{%
     \definefont[capfont][file:QTCaslanOpen.otf at 54pt]
     \noindent\kern 1.5em {\capfont O}
-    \noindent\kern -0.6em {\kerncharacters[0.17]\sc #1}%            
+    \kern -0.6em {\kerncharacters[0.17]\sc #1}%            
 }
 
 \define[1]\dropcapT{%
