--- a/projects/strandnoveller/content/ennydag.tex
+++ b/projects/strandnoveller/content/ennydag.tex
@@ -1,6 +1,6 @@
 \chapter[ennydag]{En ny dag}
 
-Det var den 7:e december. Snöflingorna hade sakta börjat dala ner på det lilla sömniga postkontoret i byn. Posttjänstemannen Dag Börjesson tittade förstrött på högen med rek-brev. Hur var det nu igen, vilken säck skulle de ligga i? Varför var det alltid så krångligt med specialposten? Han suckade, tittade över axeln för att försäkra sig om att inte chefen Brandin såg på och tippade därefter lite nonchalant ner rek-högen i den röda julpostsäcken. Så, nu var det löst och Dag kunde ta sig en ny kopp kaffe i personalrummet. Det hade han gjort sig förtjänt av. Logistik och köteori var inte hans specialitet. Nej, roligare var det med kvantfysik och våglära. Trots Dags kunskaper i fysik och studier på universitetet hade han hamnat som posttjänsteman i en liten, sömnig håla, men det bekom honom inte särskilt mycket. 
+\dropcapD{et var den }7:e december. Snöflingorna hade sakta börjat dala ner på det lilla sömniga postkontoret i byn. Posttjänstemannen Dag Börjesson tittade förstrött på högen med rek-brev. Hur var det nu igen, vilken säck skulle de ligga i? Varför var det alltid så krångligt med specialposten? Han suckade, tittade över axeln för att försäkra sig om att inte chefen Brandin såg på och tippade därefter lite nonchalant ner rek-högen i den röda julpostsäcken. Så, nu var det löst och Dag kunde ta sig en ny kopp kaffe i personalrummet. Det hade han gjort sig förtjänt av. Logistik och köteori var inte hans specialitet. Nej, roligare var det med kvantfysik och våglära. Trots Dags kunskaper i fysik och studier på universitetet hade han hamnat som posttjänsteman i en liten, sömnig håla, men det bekom honom inte särskilt mycket. 
 
 Postmästare Gösta Brandin satt vid sitt prydliga skrivbord på kontoret. Han suckade och kikade ut över sitt rike. Den här morgonen, liksom alla andra, hade den anställde Dag Börjesson återigen varit mycket sen till jobbet. Han var dessutom arrogant, småfet och inte direkt någon glädjespridare på posten. De andra medarbetarna hade ofta klagat på att han dessutom inte verkade sköta sin hygien, var ohyfsad och otrevlig mot kunderna och nästan alltid var sen till jobbet. Arbetsskygg hade de sagt. Gösta Brandin som var en mycket godtrogen man, brottades med det faktum att Dag Börjesson nog inte passade in i hans arbetslag och han våndades över att han en dag skulle behöva säga upp honom. Skulle idag vara den dagen? Nervositeten började kännas i hårfästet. Gösta slog bort tanken igen, han skulle fundera lite till. 
 
@@ -10,15 +10,15 @@ Dag märkte att medarbetarna vid sorteringsbandet himlade med ögonen och kastad
 
 Kerstin blev rasande och höll på att gå upp i limningen.
 
-- Nu får det väl ändå räcka! sa Kerstin och konfronterade den lågpresterande Dag. Nu går jag och Karin till chefen, såhär kan Du inte fortsätta! 
+– Nu får det väl ändå räcka! sa Kerstin och konfronterade den lågpresterande Dag. Nu går jag och Karin till chefen, såhär kan Du inte fortsätta! 
 
 Dag såg förundrat på Kerstin, hur kunde någon bli så arg för några droppar kaffe? Dessutom fick hon ju också en välbehövlig paus i sitt arbete. Det där med tid verkade de inte förstå, hans arbetskamrater. Hade de vidareutbildat sig som han själv hade de förstått. Tid. Det finns alltid tid tyckte Dag. Dessutom var tiden väldigt rättvis; alla människor har exakt 24 timmar varje dygn. Det är rättvist. Tid fanns det för alla och allt hade sin tid enligt Dag.
 
 Gösta Brandin ryckte till ur sin tupplur när dörren till hans kontor plötsligt rycktes upp. In stormade Kerstin med kollegan Karin i släptåg. I sitt yrvakna tillstånd kunde Brandin se att de var mycket uppretade, minst sagt. De två postarbetande damerna ställde sig med armarna i kors framför hans skrivbord. 
 
-- Nu har det gått för långt. Vi vill att Du avskedar Dag idag, krävde de båda kvinnorna.
+– Nu har det gått för långt. Vi vill att Du avskedar Dag idag, krävde de båda kvinnorna.
 
--Brandin måste inse fakta, vi har inte tid med Dag. Nu har sorteringsarbetet stannat av helt. En hel kopp kaffe välte han ut över posten och han bad inte ens om ursäkt. Det var uppenbart att dessa kvinnor hade fått nog, deras tålamod var slut.
+– Brandin måste inse fakta, vi har inte tid med Dag. Nu har sorteringsarbetet stannat av helt. En hel kopp kaffe välte han ut över posten och han bad inte ens om ursäkt. Det var uppenbart att dessa kvinnor hade fått nog, deras tålamod var slut.
 
 Brandin förstod nu att tiden var inne, måttet var rågat och det var dags att ta ett beslut, om än det var i elfte timmen. Ville han att Karin och Kerstin skulle stanna kvar i hans lilla post-kungarike, om han ville behålla två kompetenta personer, var han tvungen att göra sig av med Dag. Dag som redan från Dag 1 hade visat sig något ointresserad och haft svårt med det sociala. Dag som alltid kom försent till sitt arbete och alltid lyckades ha en ursäkt för att lämna arbetet före stängning. Sävlig var han, och långsam. Utom när han plockade med sin mobil och sina kretskort som alltid stack ut ur tjänstejackans fickor. Tid verkade han ha gott om, han hade en lustig förmåga att aldrig verka stressad eller bekymrad över någonting. Inte ens när han fick en varning, inte ens när arbetskamraterna hoppade på honom eller sa åt honom att hjälpa till. Nu var tiden inne. Det skulle bli en ny dag i Brandins kungadöme, en ny dag för Posten i det lilla sömniga samhället. Det var dags att vakna upp! Till en ny dag.
 
