--- a/projects/strandnoveller/content/fiskmannentävling.tex
+++ b/projects/strandnoveller/content/fiskmannentävling.tex
@@ -1,7 +1,7 @@
 %Tävlingsversionen av Fiskmannen
 \chapter[fiskmannen]{Fiskmannen}
 
-Det var en vanlig morgon i april. Koltrastarna utanför Anitas lägenhetsfönster hade väckt henne igen med sin tropiska sång. Anita brukade fantisera om att de lärt sig dessa kvitter utomlands, vid Victoriasjön i Afrika eller i någon djungel. Hon hade alltid varit intresserad av fåglar, djur och natur. Särskilt fascinerande var det att sitta vid havet och se fiskmåsarna dyka och ta upp en och annan firre ur havet. Det hade varit självklart att det var lärare i biologi som hon ville utbilda sig till. På den lilla högstadieskolan trivdes hon som fisken i vattnet.
+\dropcapD{et var en} vanlig morgon i april. Koltrastarna utanför Anitas lägenhetsfönster hade väckt henne igen med sin tropiska sång. Anita brukade fantisera om att de lärt sig dessa kvitter utomlands, vid Victoriasjön i Afrika eller i någon djungel. Hon hade alltid varit intresserad av fåglar, djur och natur. Särskilt fascinerande var det att sitta vid havet och se fiskmåsarna dyka och ta upp en och annan firre ur havet. Det hade varit självklart att det var lärare i biologi som hon ville utbilda sig till. På den lilla högstadieskolan trivdes hon som fisken i vattnet.
 
 Anita steg upp och började göra sig iordning framför badrumsspegeln. Ibland kände hon sig som en gammal nucka med sina 55 år och begynnande gråhårighet. Det var längesedan hon hade varit i ett förhållande. Den senaste mannen hon träffat hade förvisso varit underbar men tyvärr inte att lita på. Han hade varit hal som en ål och slingrat sig den gången Anita hade ställt honom mot väggen. Läppstiftet på kragen kunde han inte förklara och Anita hade gråtande kastat ut honom från lägenheten. Det var sista gången hon såg honom. Han hade skickat ett vykort från en semester vid Döda havet och önskat att de skulle försöka igen. Men Anitas känslor var lika döda som havet han semestrade vid. Nästa man som hon skulle våga släppa in i sitt liv måste vara en trygg, stabil karl, som bara hade ögon för henne. Som var en fena på att uppvakta och hålla vad han lovat. Anita rättade till bluskragen, drog en kam genom håret, log och tog ett djupt andetag – vad skulle högstadieynglen ställa till med idag då?
 
