--- a/projects/strandnoveller/content/middagsgästen.tex
+++ b/projects/strandnoveller/content/middagsgästen.tex
@@ -1,6 +1,6 @@
 \chapter[middagsgästen]{Middagsgästen}
 
-Margareta blickade uttråkat ut igenom fönstret. Därute virvlade novemberlöven runt. Vattenpölarna tycktes mörka och dystra. Inne i lägenheten kändes det också dystert. För några dagar sedan hade barnen hjälpt henne att flytta in. ”Så skönt med en liten lägenhet ” hade de sagt. Nu skulle Margareta slippa allt jobb med trädgård och den tunga städningen som den stora direktörsvillan på Gulsparvsvägen hade inneburit.
+\dropcapM{argareta blickade uttråkat} ut igenom fönstret. Därute virvlade novemberlöven runt. Vattenpölarna tycktes mörka och dystra. Inne i lägenheten kändes det också dystert. För några dagar sedan hade barnen hjälpt henne att flytta in. ”Så skönt med en liten lägenhet ” hade de sagt. Nu skulle Margareta slippa allt jobb med trädgård och den tunga städningen som den stora direktörsvillan på Gulsparvsvägen hade inneburit.
 
 Margareta suckade. Tittade sig omkring i sitt nya lilla hem. Så ensamt det var. De finaste möblerna hade hon velat ta med sig. Visst, det blev fint med trångt. Barnen hade våndats över köksbordet som Margareta prompt ville ha in i köket. Resultatet blev att köksbordet fick ställas ända intill väggen, hoptryckt mot den höga rokoko-spegeln som Margareta och hennes make Georg fått i bröllopspresent en gång för 50 år sedan. Man kunde sitta högst en person vid köksbordet, möjligen två om man pressade sig intill köksbänken men det var verkligen inte att rekommendera. Det var en liten 2:a som barnen hittat till henne i det nybyggda seniorboendet för 60-plussare. 
 
