--- a/projects/strandnoveller/content/titlepage.tex
+++ b/projects/strandnoveller/content/titlepage.tex
@@ -4,17 +4,17 @@
 
 \blank[40pt,force]
 
-{\tfd\kerncharacters[0.17]\WORD Nio noveller}
+{\tfd\kerncharacters[0.17]\WORD Nio \thinspace noveller}
 
 %\blank[10pt]
 
-{\tfd\kerncharacters[0.17]\WORD i elfte timmen}
+{\tfd\kerncharacters[0.17]\WORD i \thinspace elfte \thinspace timmen}
 
-\blank[45pt]
+\blank[20pt]
 
-{\itc av}
+{\definedfont[file:roughfleurons*default at 72pt]R}
 
-\blank[40pt]
+\blank[20pt]
 
 {\itd Nina Strand}
 
