--- a/test/optexgeneric/generic.tex
+++ b/test/optexgeneric/generic.tex
@@ -80,5 +80,7 @@ As we can see in chapter~\ref[label1] on page \pgref[label1], this is a referenc
 
 \the\parskip
 
+\the\baselineskip
+
 \input mylorem
 \bye
