--- a/projects/meganassignments/assignments.tex
+++ b/projects/meganassignments/assignments.tex
@@ -1,45 +1,35 @@
 \environment assignments-environment
 
-%\showgrid
-
-\starttext
+\showgrid
 
 \definehead[question][section]
 \setuphead[question][alternative=inmargin,style=\it,interlinespace=14pt,
 before={\blank[line]},after={\blank[line]},]
 
-\setuphead[chapter][%
-    page=no,
-    placehead=yes,
-    before=,
-    after={\vskip -\baselineskip},
+%\setuplabeltext[en][chapter=Topic ]
+
+\setuphead[chapter]
+    [page=no,
     header=empty,
-%    numberstyle=scb,
+    style=\tf,
     alternative=inmargin,
-%    style=\sca,
-    style={\scb \feature[+][liningfigures]},
-    textcommand={\kerncharacters[0.14]},
-%    deeptextcommand=\WORD,
+    numberstyle={\feature[+][lnum]},
+    textcommand={\kerncharacters[0.16]},
+    deeptextcommand=\WORD,
+    after={\blank[line]},
+    before=,
 ]
 
-%%% T I T L E %%%
+\starttext
 
-%%% M A I N   T E X T %%%
+\startlines
+Megan Andrews
+ISHTA Yoga Teacher Training Homework
+\date
+\stoplines
 
-\start
-%\startalignment[middle]
-\kerncharacters[0.13]
-\tfa\WORD
-\noindent Answers\hairspace\ to\hairspace\ assignment\hairspace\ questions
-\blank[halfline]
-\noindent Megan\hairspace\ Andrews
-\blank[halfline]
-\noindent 2022-01-22\par
-\blank[line]
-%\stopalignment
-\stop
 
-\chapter[ownnumber=9,title={Anatomy and other things}]
+\chapter[ownnumber=9,title={Anatomy\hairspace\ and\hairspace\  Other\hairspace\  Things}]
 
 \question{Gunde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.} 
 
