--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -1,6 +1,6 @@
 \startenvironment assignments-environment
 
-\mainlanguage[sv]
+\mainlanguage[en]
 
 %%
 %% F O N T S
@@ -23,18 +23,18 @@
 \setuplayout[
     grid=yes,
    % TOP TO BOTTOM    
-    topspace=1in,
-    header=1\baselineskip,
-    headerdistance=1\baselineskip,
-    height=9in,
-    footerdistance=1\baselineskip,
-    footer=2\lineheight,
+    topspace=40mm,
+    header=0\baselineskip,
+    headerdistance=0\baselineskip,
+    height=217mm,
+    footerdistance=0\baselineskip,
+    footer=0\lineheight,
    % INNER TO OUTER
 %    backspace=\dimexpr(\paperwidth/8)\relax,% twosided
-    backspace=1.5in,% onesided
+    backspace=40mm,% onesided
     leftmargin=64pt,
-    leftmargindistance=7pt,
-    width=120mm,
+    leftmargindistance=9pt,
+    width=130mm,
     rightmargin=64pt,
     rightmargindistance=16pt,
 ]
